CAR-2825 : Change java version to 8u252 to avoid killing java task in docker container